# code_smorgasbord

./: .gitignore  README.md
c/arm_softfp_hard_mix_test/: Makefile  crap.c  crap.h  main.c  megacrap.c  megacrap.h
c/binblobaccess/: Makefile  README  main.c
c/c_struct_to_json_and_back/: Makefile  README.MD  aerConfig_t.json  cunit_hexutils_test.c  debug.h  hexutils.c  hexutils.h  main.c  main.h  struct_aerConfig_s_handler.c  struct_aerConfig_s_handler.h  struct_default_handler.c  struct_default_handler.h  struct_to_json.py
c/designated_initializers/: Makefile  main.c
c/dynamic_and_static_objects/: Makefile  libraryfunction1.c  libraryfunction1.h  libraryfunction2.c  libraryfunction2.h  main.c
c/extern_storage_class_test/: Makefile  global_definition.c  global_definition.h  main.c  module1.c  module1.h  module2.c  module2.h
c/fun_select/: Makefile  defines.h  main.c  main.h  print.c  print.h  test.c  test.h
c/linking_with_static_and_extern/: Makefile  source1.c  source1.h
c/module_inline_test/: Makefile  info.txt  inline_header_stuff.h  inline_stuff_module.c  inline_stuff_module.h  main.c  std_stuff_module.c  std_stuff_module.h
c/neno_fpu_test/: Makefile  code.c
c/neon_fpu_test/: Makefile  asm_summary.txt  code.c
c/offsetof_test/: Makefile  main.c
c/preporcessor_macro/: static_var_init_by_function_call.c
c/pthread/: Makefile  README
c/static_code_analyzer/: Makefile  disaster.c  disaster.h  main.c
c/struct_compare_test/: Makefile  hexdump.c  hexdump.h  (+1 more)
python/c_binding/py/: Makefile.am  Makefile.py.am  configure.ac  ideal.py.c  setup.py
(+241 files in other folders)
